--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,45 @@
-body {
+*{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  text-align: center;
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+ol{
+  list-style: none;
+  padding: 0;
+}
+
+button{
+  background-color: darkgoldenrod;
+  border: none;
+  border: 4px solid black;
+  color: white;
+  font-size: 1rem;
+  padding: .4rem 2rem;
+}
+
+input{
+  background-color: rgb(151, 141, 3);
+  color: white;
+  font-size: 1.5rem;
+  width: 90%;
+}
+
+.card-grid{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.card{
+  align-items: center;
+  border: 4px solid darkmagenta;
+  border-radius: 6px;
+  margin: 2rem;
+  overflow: hidden;
+}
+
+.card p{
+  padding: 1rem;
 }
